<resources>
    <string name="app_name">Tawasol</string>
    <string name="login_name">Your Name</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login / Generat Data</string>
    <string name="Forget_Your_Password">Forget Your Password ?</string>
    <string name="Name_Register">Name</string>
    <string name="Register_button">Register</string>
    <string name="Rmember_Me">Rmember Me !</string>
    <string name="Email_Register">E-mail</string>
    <string name="Phone_Register">Phone</string>
    <string name="Save">Save</string>
    <string name="Edit">Edit</string>
    <string name="Language">Choose Your Language:</string>
    <string name="Default_Currency">Default Currency:</string>
    <string name="Arabic">Arabic Language</string>
    <string name="English">English Language</string>
    <string name="Egyption_Pound">Egyption_Pound</string>
    <string name="Amirican_Dollar">U.S._dollar</string>
    <string name="Kuwaiti_dinar">Kuwaiti_dinar</string>
    <string name="Chinese_yuan">Chinese_yuan</string>
    <string name="Japanese_Yen">Japanese_Yen</string>
    <string name="Saudi_riyal">Saudi_riyal</string>
    <string name="Amount">Amount :</string>
    <string name="Type">Type :</string>
    <string name="Place">Place :</string>
    <string name="Description">Description :</string>
    <string name="Date">Date :</string>
    <string name="income">income</string>
    <string name="Actual_expenses">Actual expenses</string>
    <string name="planned_expenses">planned expenses</string>
    <string name="naxt">sort</string>
    <string name="filter">filter</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="Currency">
        <item>Egyption Pound</item>
        <item>U.S. dollar</item>
        <item>Kuwaiti dinar</item>
        <item>Chinese yuan</item>
        <item>Japanese Yen</item>
        <item>Saudi riyal</item>
    </string-array>


    <string-array name="tabs">
        <item>Transactions</item>
        <item>Balance</item>
        <item>Graph</item>
        <item>Expenses</item>
    </string-array>

    <string-array name="Filter">
        <item>Filter By</item>
        <item>Services/Lease</item>
        <item>Clothes</item>
        <item>Delivery</item>
        <item>Fixes</item>
        <item>Food</item>
        <item>income</item>
        <item>Other</item>
    </string-array>

    <string-array name="Sort">
        <item>Sort By</item>
        <item>Type</item>
        <item>Data/Time</item>
    </string-array>

    <string-array name="chooseOne">
        <item>Income Transaction</item>
        <item>Actual Expenses Transaction</item>
        <item>Planned Expenses Transaction</item>
    </string-array>

    <string-array name="type">
        <item>Choose type</item>
        <item>Services/Lease</item>
        <item>Clothes</item>
        <item>Delivery</item>
        <item>Fixes</item>
        <item>Food</item>
        <item>Income</item>
        <item>Other</item>
    </string-array>

    <string-array name="current_balance">
        <item>january</item>
        <item>february</item>
        <item>march</item>
        <item>april</item>
        <item>may</item>
        <item>june</item>
        <item>july</item>
        <item>august</item>
        <item>september</item>
        <item>october</item>
        <item>november</item>
        <item>december</item>
    </string-array>

    <string-array name="Days">
        <item>day</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="Monthes">
        <item>month</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="Years">
        <item>year</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Delete_My_Account">Delete My Account</string>
    <string name="sitting">Setting</string>
    <string name="singOut">Sign Out</string>

</resources>
