<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.islam.tawasoltaskaccountingapplication.SettingActivity">


    <ScrollView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Language"
                android:textColor="#0037ff"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/arabicLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:checked="false"
                    android:text="@string/Arabic"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/englishLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/English"
                    android:textSize="25sp" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="130dp"
                android:background="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:textColor="#0037ff"
                android:text="@string/Default_Currency"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/currencyGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="190dp">

                <RadioButton
                    android:id="@+id/egp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Egyption_Pound"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/dollar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Amirican_Dollar"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/dinar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Kuwaiti_dinar"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/chine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Chinese_yuan"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/japan"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/Japanese_Yen"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/saudi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Saudi_riyal"
                    android:textSize="20sp" />

            </RadioGroup>


        </FrameLayout>

    </ScrollView>

    <TextView
        android:background="#ccc"
        android:layout_width="1dp"
        android:layout_marginRight="90dp"
        android:layout_gravity="top|right"
        android:layout_height="50dp" />
    <Button
        android:id="@+id/save_setting"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:text="@string/Save"
        android:background="#ffffff"
        android:textSize="25sp"/>

    <TextView
        android:layout_gravity="top|left"
        android:text="Setting"
        android:textSize="35sp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</FrameLayout>
