<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="com.example.islam.tawasoltaskaccountingapplication.RegisterActivity">

    <Button
        android:id="@+id/register_seve"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/Save"
        android:textColor="#000000"
        android:textSize="25sp" />
    <TextView
        android:background="#ccc"
        android:layout_width="1dp"
        android:layout_gravity="right|top"
        android:layout_marginRight="80dp"
        android:layout_height="50dp" />

    <FrameLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            style="@style/contactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:hint="@string/Name_Register"
            android:ems="10"
            android:id="@+id/name_register"
            android:layout_gravity="center_horizontal|top" />

        <EditText
            style="@style/contactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:hint="@string/login_password"
            android:ems="10"
            android:id="@+id/password_register"
            android:layout_gravity="center_horizontal|top" />

        <EditText
            style="@style/contactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:hint="@string/Email_Register"
            android:ems="10"
            android:id="@+id/email_register"
            android:layout_gravity="center_horizontal|top" />

        <EditText
            style="@style/contactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:inputType="number"
            android:hint="@string/Phone_Register"
            android:textColor="#000000"
            android:ems="10"
            android:id="@+id/phone_register"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>




</FrameLayout>
