<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.islam.tawasoltaskaccountingapplication.Signin">


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#ffffff"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:inputType="textPassword"
        android:textColor="#000000" />


    <Button
        android:id="@+id/loginbutton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="#6c80ff"
        android:text="@string/login_button"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        android:background="#6c80ff"
        android:gravity="center"
        android:text="@string/Register_button"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgetYourPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="125dp"
        android:layout_marginRight="80dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/Forget_Your_Password"/>

    <CheckBox
        android:id="@+id/rememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#2200ff"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginBottom="70dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="80dp"
        android:text="@string/Rmember_Me" />


</FrameLayout>
