<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.example.islam.tawasoltaskaccountingapplication.AddTransaction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textTypeTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/planned_expenses"
            android:textSize="25sp"
            android:layout_weight="5"
            android:textStyle="bold" />
        <TextView
            android:background="#ccc"
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/addTransaction"
            android:layout_width="match_parent"
            android:background="#ffffff"
            android:padding="5dp"
            android:textSize="25sp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:text="Save" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7">

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTypeTransaction"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="76dp"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/Amount"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/addamount"
                    style="@style/contactTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="9"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="76dp"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/Type"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/addType"
                    style="@style/contactTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_column="1"
                    android:layout_weight="9"
                    android:entries="@array/type"
                    android:tag="Choose Type" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="76dp"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/Place"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/AddPlace"
                    style="@style/contactTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="9" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="76dp"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/Description"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/addDescription"
                    style="@style/contactTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="9" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="76dp"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/Date"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="9"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Spinner
                        android:id="@+id/spinnerOfDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/Days" />

                    <Spinner
                        android:id="@+id/spinnerOfMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/Monthes" />

                    <Spinner
                        android:id="@+id/spinnerOfYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/Years" />
                </LinearLayout>

            </TableRow>
        </TableLayout>
    </ScrollView>


</LinearLayout>
